--- a/FreshlandDairy/src/main/resources/application.properties
+++ b/FreshlandDairy/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/FreshlandDairy?user=root
-spring.datasource.username = root
-spring.datasource.password = root
-
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.url = jdbc:mysql://localhost:3306/FreshlandDairy?user=root
+#spring.datasource.username = root
+#spring.datasource.password = root
+#
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#
+#spring.jpa.hibernate.ddl-auto = update
 
 jwt.signing.key.secret=mySecret
 jwt.get.token.uri=/authenticate
